--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,11 +11,11 @@
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
-  --color-grey-1: #dbe1e8;
-  --color-grey-2: #b2becd;
+  --color-grey-1: #dbe8dc;
+  --color-grey-2: #b2cdbc;
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
-  --color-grey-5: #2a2e35;
+  --color-grey-5: #2a352e;
   --color-grey-6: #12181b;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
@@ -693,6 +693,11 @@ section {
 .about-container .left-about p {
   padding-left: 0;
 }
+
+.contact-item {
+  align-items: baseline;
+}
+
 
 @media screen and (max-width: 600px) {
   header {
