--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
   --color-black: #000;
   --color-grey0: #f8f8f8;
   --color-grey-1: #dbe8dc;
-  --color-grey-2: #b2cdbc;
+  --color-grey-2: #c5c6ca;
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
   --color-grey-5: #2a352e;
