--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@
 
 .light-mode {
   --color-primary: #191d2b;
-  --color-secondary: #0dfb54;
+  --color-secondary: #f5076f;
   --color-white: #ffffff;
   --color-black: #000;
   --color-grey0: #f8f8f8;
