--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 
 :root {
   --color-primary: #191d2b;
-  --color-secondary: #2afafe;
+  --color-secondary: #00ffdd;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -23,7 +23,7 @@
 
 .light-mode {
   --color-primary: #191d2b;
-  --color-secondary: #f5076f;
+  --color-secondary: #c507f5;
   --color-white: #ffffff;
   --color-black: #000;
   --color-grey0: #f8f8f8;
