--- a/styles/styles.css
+++ b/styles/styles.css
@@ -308,11 +308,13 @@ section {
   transition: all 0.4s ease-in-out;
   width: 60%;
 }
+
+/* TAITOPROSENTIT */
 .about-stats .progress-bars .progress-bar .progress-con .progress .html {
-  width: 80%;
+  width: 90%;
 }
 .about-stats .progress-bars .progress-bar .progress-con .progress .css {
-  width: 80%;
+  width: 85%;
 }
 .about-stats .progress-bars .progress-bar .progress-con .progress .js {
   width: 40%;
@@ -325,6 +327,9 @@ section {
 }
 .about-stats .progress-bars .progress-bar .progress-con .progress .python {
   width: 75%;
+}
+.about-stats .progress-bars .progress-bar .progress-con .progress .new {
+  width: 25%;
 }
 
 .stat-title {
