--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -304,6 +304,7 @@ section {
                     .react{ width: 80%; }
                     .node{ width: 87%; }
                     .python{ width: 70%; }
+                    .new{ width: 25%; }
                 }
             }
         }
