--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 
 :root {
   --color-primary: #191d2b;
-  --color-secondary: #02a9f7;
+  --color-secondary: #00d8ff;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
