--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 
 :root {
   --color-primary: #191d2b;
-  --color-secondary: #441100;
+  --color-secondary: #ac634a;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -23,7 +23,7 @@
 
 .light-mode {
   --color-primary: #191d2b;
-  --color-secondary: #00582f;
+  --color-secondary: #678b7a;
   --color-white: #ffffff;
   --color-black: #000;
   --color-grey0: #f8f8f8;
