--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,7 +38,7 @@
 body {
   background-color: var(--color-primary);
   font-family: "Poppins", sans-serif;
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: var(--color-white);
   transition: all 0.4s ease-in-out;
 }
@@ -714,6 +714,15 @@ section {
 
 .contact-item {
   align-items: baseline;
+}
+
+.contact-info {
+  margin-right: 30px;
+}
+
+.imagePhone {
+  margin-left: 50px;
+  margin-top: 50px;
 }
 
 /* ANIMAATIO */
