--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@
   --color-grey-4: #454e56;
   --color-grey-5: #2a352e;
   --color-grey-6: #12181b;
+  --color-blue-7: #23acf3;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
@@ -25,14 +26,15 @@
   --color-primary: #191d2b;
   --color-secondary: #23acf3;
   --color-white: #ffffff;
-  --color-black: #000;
+  --color-black: #ffffff;
   --color-grey0: #f8f8f8;
   --color-grey-1: #dbe1e8;
   --color-grey-2: #b2becd;
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
-  --color-grey-5: #2a2e35;
-  --color-grey-6: #12181b;
+  --color-grey-5: #191d2b;
+  --color-grey-6: #ffffff;
+  --color-orange-7: #ff3c00;
 }
 
 body {
@@ -100,6 +102,8 @@ section {
   justify-content: center;
   transform: translateY(-50%);
 }
+
+
 .controls .control {
   padding: 1rem;
   cursor: pointer;
@@ -118,13 +122,23 @@ section {
   color: var(--color-grey-2);
   pointer-events: none;
 }
+
+.control:hover {
+  scale: 0.85;
+  transition: ease-in-out;
+  background-color: var(--color-secondary);
+}
+
 .controls .active-btn {
   background-color: var(--color-secondary);
+  scale: 1.2;
   transition: all 0.4s ease-in-out;
 }
 .controls .active-btn i {
   color: var(--color-white);
 }
+
+
 
 .theme-btn {
   top: 5%;
@@ -142,12 +156,23 @@ section {
   transition: all 0.1s ease-in-out;
 }
 .theme-btn:active {
-  transform: translateY(-3px);
+  transform: translateY(-15px);
 }
+
 .theme-btn i {
   font-size: 1.4rem;
   color: var(--color-grey-2);
   pointer-events: none;
+}
+
+.light-mode .theme-btn:hover {
+  background-color: var(--color-orange-7);
+  scale: 0.8;
+}
+
+.theme-btn:hover {
+  background-color: var(--color-blue-7);
+  scale: 0.8;
 }
 
 /*Header-content*/
@@ -734,6 +759,7 @@ section {
 
 
 
+
 /* ANIMAATIO */
 .bounce-top {
 	-webkit-animation: bounce-top 0.9s 2 both;
@@ -844,10 +870,6 @@ section {
     opacity: 1;
   }
 }
-
-
-
-
 
 
 
