--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,7 @@ section {
   align-items: center;
   justify-content: center;
   transform: translateY(-50%);
+  
 }
 
 
@@ -116,6 +117,8 @@ section {
   align-items: center;
   margin: 0.7rem 0;
   box-shadow: var(--box-shadow-1);
+  border: 2px solid;
+  border-color: #ffffff;
 }
 .controls .control i {
   font-size: 1.2rem;
@@ -138,6 +141,11 @@ section {
   color: var(--color-white);
 }
 
+.fa-info-circle:hover {
+  transform: rotate(60deg);
+  transition: ease-in-out;
+}
+
 
 
 .theme-btn {
@@ -154,9 +162,12 @@ section {
   align-items: center;
   box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3);
   transition: all 0.1s ease-in-out;
+  border: 2px solid;
+  border-color: #ffffff;
 }
 .theme-btn:active {
   transform: translateY(-15px);
+  
 }
 
 .theme-btn i {
@@ -173,6 +184,7 @@ section {
 .theme-btn:hover {
   background-color: var(--color-blue-7);
   scale: 0.8;
+  
 }
 
 /*Header-content*/
@@ -481,7 +493,7 @@ section {
   transition: all 0.4s ease-in-out;
 }
 .portfolios .portfolio-item .hover-items h3 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: var(--color-white);
   margin-bottom: 1.5rem;
 }
@@ -503,7 +515,7 @@ section {
   transition: all 0.4s ease-in-out;
 }
 .portfolios .portfolio-item .hover-items .icons .icon i {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   color: var(--color-white);
   margin: 0 1rem;
 }
