--- a/styles/styles.css
+++ b/styles/styles.css
@@ -896,6 +896,10 @@ section {
     height: 50px;
   }
 
+  .imagePhone {
+    display: none;
+  }
+
   .header-content {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
@@ -1081,6 +1085,10 @@ section {
     padding-top: 2.5rem;
   }
 
+  .imagePhone {
+    display: none;
+  }
+  
   .main-title h2 {
     font-size: 4rem;
   }
@@ -1128,6 +1136,10 @@ section {
 @media screen and (max-width: 700px) {
   .container {
     padding: 7rem 3rem;
+  }
+
+  .imagePhone {
+    display: none;
   }
 
   .about-stats .progress-bars {
