--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,10 +142,23 @@ section {
 }
 
 .fa-info-circle:hover {
-  transform: rotate(60deg);
-  transition: ease-in-out;
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
 }
 
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
 
 
 .theme-btn {
@@ -765,7 +778,6 @@ section {
   margin-left: -10px;
   margin-top: 50px;
 }
-
 
 
 
