--- a/styles/styles.css
+++ b/styles/styles.css
@@ -780,7 +780,55 @@ section {
 }
 
 
+/* FLIP PHONE */
 
+.flip-card {
+  position: relative;
+  background-color: transparent;
+  width: 225px;
+  height: 360px;
+  
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+
+
+/* Style the back side */
+.flip-card-back {
+  position: relative;
+  border: 1px solid white;
+  border-radius: 15px;
+  top: 15%;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
+  transform: rotateY(180deg);
+}
 
 
 
@@ -909,6 +957,10 @@ section {
   }
 
   .imagePhone {
+    display: none;
+  }
+
+  .flip-card {
     display: none;
   }
 
@@ -1101,6 +1153,10 @@ section {
     display: none;
   }
 
+  .flip-card {
+    display: none;
+  }
+
   .main-title h2 {
     font-size: 4rem;
   }
@@ -1117,6 +1173,10 @@ section {
   }
 
   .imagePhone {
+    display: none;
+  }
+
+  .flip-card {
     display: none;
   }
 
@@ -1155,6 +1215,10 @@ section {
   }
 
   .imagePhone {
+    display: none;
+  }
+
+  .flip-card {
     display: none;
   }
 
