--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,6 +146,11 @@ section {
   animation-iteration-count: infinite;
 }
 
+.fa-play:hover {
+  color: #00ff0d;
+  
+}
+
 @keyframes shake {
   0% { transform: translate(1px, 1px) rotate(0deg); }
   10% { transform: translate(-1px, -2px) rotate(-1deg); }
