--- a/styles/styles.css
+++ b/styles/styles.css
@@ -836,6 +836,153 @@ section {
 }
 
 
+.flower{
+	position: absolute;
+	bottom: 180px;
+  top: 355px;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+	width: 50px;
+	transform: rotate(180deg);
+}
+.stem{
+	position: absolute;
+	left: 25px;
+	width: 5px;
+	height: 0px;
+	background: linear-gradient(-90deg, #0d0, #0a0);
+	animation: grow 10s linear forwards;
+}
+@keyframes grow{
+	25%{height: 0;}
+	34%{height: 22px;}
+	39%{height: 22px;}
+	41%{height: 27px;}
+	45%{height: 27px;}
+	52%{height: 92px;}
+	55%{height: 94px;}
+	100%{height: 120px;}
+}
+.leaf{
+	position: absolute;
+	width: 25px;
+	top: -10px;
+	left: 18px;
+	height: 38px;
+	border-radius: 1% 100%;
+	background: linear-gradient(70deg, #0e0, #0a0);
+	transform-origin: bottom;
+	transform: rotate(-110deg);
+	animation: leaf-1 10s linear;
+}
+@keyframes leaf-1{
+	0%{transform: scaleY(0) rotate(-180deg);}
+	38%{transform: scaleY(0) rotate(-110deg);}
+	50%{transform: scaleY(1) rotate(-110deg);}
+}
+.leaf:before{
+	position: absolute;
+	content: '';
+	top: 18px;
+	left: -33px;
+	width: 30px;
+	height: 45px;
+	border-radius: 1% 100%;
+	background: linear-gradient(70deg, #0e0, #0a0);
+	transform: rotate(110deg);
+	animation: leaf-2 10s linear;
+}
+@keyframes leaf-2{
+	0%{transform: scaleY(0) rotate(110deg);}
+	45%{transform: scaleY(0) rotate(110deg);}
+	52%{transform: scaleY(1) rotate(110deg);}
+}
+.leaf:after{
+	position: absolute;
+	content: '';
+	top: -20px;
+	left: -60px;
+	width: 25px;
+	height: 35px;
+	border-radius: 1% 100%;
+	background: linear-gradient(70deg, #0e0, #0a0);
+	transform-origin: bottom;
+	animation: leaf-3 10s linear;
+}
+@keyframes leaf-3{
+	0%{transform: scaleY(0);}
+	55%{transform: scaleY(0);}
+	72%{transform: scaleY(1);}
+}
+.dot{
+	position: absolute;
+	top: 147px;
+	left: 24px;
+	height: 15px;
+	width: 15px;
+	border-radius: 50%;
+	background-color: #f8d545;
+	box-shadow: 0 0 0 4px #d85,
+				0 0 8px 4px #444,
+				inset 0 0 8px #fd0;
+	opacity: 0;
+	animation: flower 10s linear forwards;
+}
+@keyframes flower{
+	72%{opacity: 0;}
+	74%{opacity: 1;}
+	100%{opacity: 1;}
+}
+.petal{
+	position: absolute;
+	width: 0px;
+	height: 40px;
+	border-radius: 100% 0% 50% 50% /50% 0% 100% 50%;
+	background: linear-gradient(
+	185deg,
+    #941346 0%,
+    #E63B94 50%,
+    #FF5AB0 75%,
+    #FF7DC1 100%
+  );
+	opacity: 0;
+	animation: petal 10s linear forwards;
+}
+@keyframes petal{
+	72%{opacity: 0;}
+	84%{opacity: 1; width: 40px;}
+	100%{opacity: 1; width: 40px;}
+}
+.petal-1{
+	top: 155px;
+	left: -9px;
+}
+.petal-2{
+	top: 125px;
+	left: -18px;
+	transform: rotate(60deg);
+}
+.petal-3{
+	top: 105px;
+	left: 5px;
+	transform: rotate(120deg);
+}
+.petal-4{
+	top: 110px;
+	left: 35px;
+	transform: rotate(180deg);
+}
+.petal-5{
+	top: 140px;
+	left: 42px;
+	transform: rotate(240deg);
+}
+.petal-6{
+	top: 160px;
+	left: 18px;
+	transform: rotate(300deg);
+}
 
 /* ANIMAATIO */
 .bounce-top {
