--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -88,6 +88,7 @@
     .blogs{
         grid-template-columns: repeat(1, 1fr);
         padding-bottom: 6rem;
+        margin-top: 1rem;
     }
 
     .contact-content-con{
