--- a/styles/styles.css
+++ b/styles/styles.css
@@ -587,6 +587,7 @@ html {
   grid-gap: 1.5rem;
   margin-top: 2rem;
 }
+
 .blogs .blog {
   position: relative;
   background-color: var(--color-grey-5);
@@ -1173,6 +1174,8 @@ html {
   .main-title h2 .bg-text {
     font-size: 5.5rem;
   }
+
+  
 }
 @media screen and (max-width: 1250px) {
   .blogs {
@@ -1187,7 +1190,22 @@ html {
   .header-content .right-header {
     padding-right: 9rem;
   }
+
+  .blogs {
+    grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 6rem;
+    margin-top: 2rem;
+  }
+
+  .imagePhone {
+    display: none;
+  }
+
+  .flip-card {
+    display: none;
+  }
 }
+
 @media screen and (max-width: 660px) {
   .blogs {
     grid-template-columns: repeat(1, 1fr);
