--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1175,6 +1175,14 @@ html {
     font-size: 5.5rem;
   }
 
+  .imagePhone {
+    display: none;
+  }
+
+  .flip-card {
+    display: none;
+  }
+
   
 }
 @media screen and (max-width: 1250px) {
