--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1230,6 +1230,21 @@ html {
   .flip-card {
     display: none;
   }
+  
+  .about-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .about-container .right-about {
+    grid-template-columns: repeat(1, 1fr);
+    padding-top: 2.5rem;
+  }
+  .about-container .left-about {
+    padding-right: 0;
+    
+  }
+  .about-container .left-about p {
+    padding-left: 0;
+  }
 }
 
 @media screen and (max-width: 660px) {
