--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1230,7 +1230,7 @@ html {
   .flip-card {
     display: none;
   }
-  
+
   .about-container {
     grid-template-columns: repeat(1, 1fr);
   }
@@ -1325,7 +1325,23 @@ html {
     text-align: center;
     padding-top: 3rem;
   }
+
+  .about-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .about-container .right-about {
+    grid-template-columns: repeat(1, 1fr);
+    padding-top: 2.5rem;
+  }
+  .about-container .left-about {
+    padding-right: 0;
+    
+  }
+  .about-container .left-about p {
+    padding-left: 0;
+  }
 }
+
 @media screen and (max-width: 700px) {
   .container {
     padding: 7rem 3rem;
@@ -1359,5 +1375,20 @@ html {
   }
   .main-title h2 .bg-text {
     font-size: 4rem;
+  }
+
+  .about-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .about-container .right-about {
+    grid-template-columns: repeat(1, 1fr);
+    padding-top: 2.5rem;
+  }
+  .about-container .left-about {
+    padding-right: 0;
+    
+  }
+  .about-container .left-about p {
+    padding-left: 0;
   }
 }
