--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,6 +119,7 @@ section {
 
 
 .controls .control {
+  margin-top: 0;
   padding: 1rem;
   cursor: pointer;
   background-color: var(--color-grey-4);
@@ -1023,7 +1024,19 @@ html {
     width: 90%;
   }
 
-  
+  .controls {
+    top: auto;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--color-grey-5);
+  }
+  .controls .control {
+    margin: 1rem 0.3rem;
+  }
 
   .about-container {
     grid-template-columns: repeat(1, 1fr);
