--- a/styles/styles.css
+++ b/styles/styles.css
@@ -338,6 +338,10 @@ section {
   text-transform: uppercase;
 }
 
+.about-container, h2 {
+  padding-bottom: 3rem;
+}
+
 
 :root {
   --items-per-page: 4;
@@ -532,7 +536,6 @@ html {
   opacity: 1;
   transform: scale(1);
 }
-
 
 
 
