--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,7 +34,7 @@
   --color-grey-2: #b2becd;
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
-  --color-grey-5: #191d2b;
+  --color-grey-5: #2a352e;
   --color-grey-6: #ffffff;
   --color-orange-7: #ff3c00;
 }
