--- a/styles/styles.css
+++ b/styles/styles.css
@@ -253,6 +253,7 @@ section {
   object-fit: cover;
   transition: all 0.4s ease-in-out;
   filter: grayscale(0%);
+  
 }
 
 
@@ -270,10 +271,12 @@ section {
 }
 .header-content .right-header .name span {
   color: var(--color-secondary);
+  
 }
 .header-content .right-header p {
   margin: 1.5rem 0;
   line-height: 2rem;
+  margin-top: 0%;
 }
 
 /*About*/
@@ -366,7 +369,7 @@ section {
   box-sizing: border-box;
   padding: 0px;
   text-align: center;
-  margin-bottom: 6px;
+  margin-bottom: 4px;
     
 }
 
@@ -386,7 +389,7 @@ html {
   text-transform: uppercase;
   font-size: 2.4rem;
   text-align: center;
-  padding: 3.5rem 0;
+  padding: 2rem 0;
   position: relative;
 }
 .stat-title::before {
