--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1075,6 +1075,7 @@ html {
   .blogs {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
+    margin-top: 1rem;
   }
 
   .contact-content-con {
