--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,8 @@ body {
   font-size: 1rem;
   color: var(--color-white);
   transition: all 0.4s ease-in-out;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 
