--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,6 +49,7 @@ body {
   transition: all 0.4s ease-in-out;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  height: 100%; 
 }
 
 
@@ -79,8 +80,7 @@ section {
   position: fixed;
   bottom: 0%;
   left: 0%;
-  
-  
+
 }
 
 .container {
@@ -88,6 +88,9 @@ section {
   transform: translateY(-100%) scale(0);
   transition: all 0.4s ease-in-out;
   background-color: var(--color-primary);
+  width: 100%;
+  
+  
 }
 
 .active {
@@ -491,13 +494,13 @@ html {
 }
 .portfolios .portfolio-item {
   position: relative;
-  border-radius: 15px;
+  border-radius: 5px;
 }
 .portfolios .portfolio-item img {
   width: 100%;
   height: 190px;
   object-fit: cover;
-  border-radius: 15px;
+  border-radius: 5px;
 }
 .portfolios .portfolio-item .hover-items {
   width: 100%;
@@ -506,7 +509,7 @@ html {
   position: absolute;
   left: 0;
   top: 0;
-  border-radius: 15px;
+  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -563,6 +566,8 @@ html {
   margin-top: 2rem;
 }
 
+
+
 .blogs .blog {
   position: relative;
   background-color: var(--color-grey-5);
@@ -584,8 +589,8 @@ html {
   width: 100%;
   height: 180px;
   object-fit: cover;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   filter: grayscale(0%);
   transition: all 0.4s ease-in-out;
 }
@@ -1241,6 +1246,7 @@ html {
     padding-top: 2.5rem;
   }
 
+  
   .imagePhone {
     display: none;
   }
