--- a/styles/styles.css
+++ b/styles/styles.css
@@ -377,15 +377,17 @@ section {
   min-width: calc(100% / var(--items-per-page));
   box-sizing: border-box;
   text-align: center;
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.1rem;
     
 }
+
 
 
 .stat-title {
   
   font-size: 1.5rem;
   text-align: center;
+  margin-top: 2rem;
   padding: 2rem 0;
   position: relative;
 }
