--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
 
 * {
   margin: 0;
@@ -65,6 +66,7 @@ header {
   color: var(--color-white);
   overflow: hidden;
   padding: 0 !important;
+  
 }
 
 section {
@@ -83,6 +85,14 @@ section {
 
 }
 
+/* ETUSIVUN NIMI TYYLI */
+.name {
+  font-family: "Just Another Hand";
+  font-weight: 400;
+  font-style: normal;
+  
+}
+
 .container {
   display: none;
   transform: translateY(-100%) scale(0);
@@ -90,7 +100,6 @@ section {
   background-color: var(--color-primary);
   width: 100%;
 }
-
 
 
 .active {
@@ -158,6 +167,7 @@ section {
 .controls .active-btn i {
   color: var(--color-white);
 }
+
 
 .fa-info-circle:hover {
   animation: shake 0.5s;
