--- a/styles/styles.css
+++ b/styles/styles.css
@@ -996,6 +996,7 @@ section {
 @media screen and (max-width: 600px) {
   header {
     padding: 0 !important;
+    
   }
 
   .theme-btn {
@@ -1014,7 +1015,7 @@ section {
   .header-content {
     grid-template-columns: repeat(1, 1fr);
     padding-bottom: 6rem;
-    margin-bottom: -96px;
+    margin-bottom: -6rem; 
   }
 
   .left-header .h-shape {
@@ -1427,4 +1428,5 @@ section {
     margin-top: 0;
     top: 0;
   }
+}
 }
