--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
   margin: 0;
@@ -42,7 +43,7 @@
 
 body {
   background-color: var(--color-primary);
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 0.9rem;
@@ -90,8 +91,9 @@ section {
   font-family: "Just Another Hand";
   font-weight: 400;
   font-style: normal;
-  
+ 
 }
+
 
 .container {
   display: none;
@@ -1352,11 +1354,16 @@ section {
     padding-right: 0rem !important;
     width: 90%;
     margin: 0 auto;
+    align-items: center;
   }
   .right-header .name {
     font-size: 2.5rem !important;
     text-align: center;
     padding-top: 3rem;
+  }
+
+  .right-header p {
+    text-align: center;
   }
 
   .about-container {
@@ -1423,10 +1430,6 @@ section {
     padding-left: 0;
   }
  
-  .data-id {
-    overflow: scroll;
-    margin-top: 0;
-    top: 0;
-  }
+  
 }
 }
