--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,59 +54,51 @@ body {
   height: 100%; 
 }
 
-/* Kuutio ja sen pyörimisanimaatio */
+/* tekstin animaatio */
+
 .scene {
-  width: 50px;
-  height: 50px;
   position: relative;
-  transform-style: preserve-3d;
-  animation: rotateCube 7s linear infinite;
-  margin-top: 2rem;
-  margin-left: 15rem;
-}
-
-/* Kuution perusrakenne */
-.cube {
-  width: 50%;
-  height: 50%;
-  position: absolute;
-  transform-style: preserve-3d;
-  transform: rotateX(-30deg);
-  margin-top: 3rem;
-}
-
-
-
-/* Kuution sivujen tyyli */
-.face {
-  position: absolute;
-  width: 150px;
-  height: 150px;
+  width: 100%;
   display: flex;
-  border-radius: 5%;
-  justify-content: center;
-  text-align: center;
   align-items: center;
-  opacity: 70%;
-  font-size: 1.0em;
-  font-weight:normal;
-  background: var(--color-secondary);
-  border: 2px solid rgb(255, 255, 255);
+  justify-content: center;
+  overflow: hidden;
 }
 
-/* Sivujen sijoittelu 3D-tilassa */
-.front  { transform: translateZ(100px); }
-.back   { transform: rotateY(180deg) translateZ(100px); }
-.left   { transform: rotateY(-90deg) translateZ(100px); }
-.right  { transform: rotateY(90deg) translateZ(100px); }
-.top    { transform: rotateX(90deg) translateZ(100px); }
-.bottom { transform: rotateX(-90deg) translateZ(100px); }
-
-/* Pyörimisanimaatio */
-@keyframes rotateCube {
-  0%   { transform: rotateX(0deg) rotateY(0deg); }
-  100% { transform: rotateX(360deg) rotateY(360deg); }
+.text {
+  font-size: 2em;
+  font-weight: bold;
+  color: var(--color-secondary);
+  animation: bounceInDown 2s ease forwards;
+  opacity: 100;
 }
+
+/* Animaatiot */
+@keyframes bounceInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-100px) scale(0.5);
+  }
+  60% {
+    opacity: 1;
+    transform: translateY(20px) scale(1.1);
+  }
+  100% {
+    transform: translateY(0) scale(1);
+  }
+}
+
+@keyframes bounceOutDown {
+  0% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(100px) scale(0.3);
+  }
+}
+
 
 
 a {
@@ -1225,7 +1217,7 @@ section {
   .scene {
    
     margin-top: 2rem;
-    margin-left: 7rem;
+    margin-left: 1rem;
   }
   
   .right-header .name {
@@ -1303,7 +1295,7 @@ section {
   .scene {
    
     margin-top: 2rem;
-    margin-left: 10rem;
+    margin-left: 1rem;
   }
 
   .right-header .name {
