--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1164,6 +1164,8 @@ section {
 
   .contact-content-con {
     flex-direction: column;
+    padding-bottom: 0;
+    height: auto;
   }
   .contact-content-con .right-contact {
     margin-left: 0;
@@ -1283,6 +1285,10 @@ section {
     margin-top: 1rem;
   }
 
+  .contact-content-con {
+    padding-bottom: 0%;
+  }
+
   
 }
 @media screen and (max-width: 1250px) {
@@ -1338,6 +1344,10 @@ section {
   .about-container .left-about p {
     padding-left: 0;
   }
+
+  .contact-content-con {
+    padding-bottom: 0%;
+  }
 }
 
 @media screen and (max-width: 660px) {
@@ -1360,6 +1370,10 @@ section {
 
   .right-header .name {
     text-align: center;
+  }
+
+  .contact-content-con {
+    padding-bottom: 0%;
   }
 
 
@@ -1392,6 +1406,10 @@ section {
     padding-bottom: 6rem;
     margin-top: 1rem;
     
+  }
+
+  .contact-content-con {
+    padding-bottom: 0%;
   }
   
   .imagePhone {
@@ -1428,6 +1446,9 @@ section {
     
   }
 
+  .contact-content-con {
+    padding-bottom: 0%;
+  }
   
   .portfolios {
     grid-template-columns: repeat(1, 1fr);
