--- a/styles/styles.css
+++ b/styles/styles.css
@@ -472,14 +472,20 @@ section {
 /*Timeline*/
 .timeline {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
-  padding-bottom: 3rem;
+  
+}
+
+.timeline, h5 {
+  height: 6em;
 }
 .timeline .timeline-item {
   position: relative;
   padding-left: 3rem;
   border-left: 1px solid var(--color-grey-5);
+  padding-bottom: 2em;
+
 }
 .timeline .timeline-item .tl-icon {
   position: absolute;
@@ -1220,6 +1226,13 @@ section {
     margin-top: 1rem;
     
   }
+
+  .timeline {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    padding-bottom: 3rem;
+  }
   
   .right-header .name {
     text-align: center;
@@ -1371,8 +1384,7 @@ section {
     text-align: center;
   }
 
-  
-
+ 
 
 @media screen and (max-width: 1070px) {
   .about-container {
