--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 
 * {
   margin: 0;
@@ -65,9 +66,13 @@ body {
   overflow: hidden;
 }
 
+
 .text {
-  font-size: 1.8em;
-  font-weight: bold;
+  font-size: 1.7em;
+  font-weight: 400;
+  letter-spacing: -0.1rem;
+  align-content: center;
+  justify-content: center;
   color: var(--color-secondary);
   animation: bounceInDown 2s ease forwards;
   opacity: 100;
