--- a/styles/styles.css
+++ b/styles/styles.css
@@ -456,8 +456,12 @@ section {
 }
 
 .stat-title { 
-  font-size: 1.5rem;
+  font-size: 1.7em;
+  font-weight: 400;
+  letter-spacing: -0.1rem;
+  align-content: center;
   text-align: center;
+  color: var(--color-secondary);
   margin-top: 2rem;
   padding: 2rem 0;
   position: relative;
