--- a/styles/styles.css
+++ b/styles/styles.css
@@ -941,19 +941,7 @@ section {
   background-color: #000000;
   color: rgb(0, 0, 0);
   transform: rotateY(180deg);
-  background-image: linear-gradient(67.5deg, rgb(239, 26, 22) 0%, rgb(239, 26, 22)
-   1%,rgb(234, 49, 20) 1%, rgb(234, 49, 20) 19%,rgb(228, 73, 17) 19%, rgb(228, 73, 17)
-    25%,rgb(223, 96, 15) 25%, rgb(223, 96, 15) 45%,rgb(217, 120, 13) 45%, rgb(217, 120, 13)
-     56%,rgb(212, 143, 11) 56%, rgb(212, 143, 11) 59%,rgb(206, 167, 8) 59%, rgb(206, 167, 8)
-      90%,rgb(201, 190, 6) 90%, rgb(201, 190, 6) 100%),linear-gradient(0deg, rgb(239, 26, 22) 
-      0%, rgb(239, 26, 22) 1%,rgb(234, 49, 20) 1%, rgb(234, 49, 20) 19%,rgb(228, 73, 17) 19%, rgb(228, 73, 17)
-       25%,rgb(223, 96, 15) 25%, rgb(223, 96, 15) 45%,rgb(217, 120, 13) 45%, rgb(217, 120, 13) 56%,rgb(212, 143, 11)
-        56%, rgb(212, 143, 11) 59%,rgb(206, 167, 8) 59%, rgb(206, 167, 8) 90%,rgb(201, 190, 6) 90%, rgb(201, 190, 6) 
-        100%),linear-gradient(67.5deg, rgb(239, 26, 22) 0%, rgb(239, 26, 22) 1%,rgb(234, 49, 20) 1%, rgb(234, 49, 20)
-         19%,rgb(228, 73, 17) 19%, rgb(228, 73, 17) 25%,rgb(223, 96, 15) 25%, rgb(223, 96, 15) 45%,rgb(217, 120, 13)
-          45%, rgb(217, 120, 13) 56%,rgb(212, 143, 11) 56%, rgb(212, 143, 11) 59%,rgb(206, 167, 8) 59%, rgb(206, 167, 8)
-           90%,rgb(201, 190, 6) 90%, rgb(201, 190, 6) 100%),linear-gradient(90deg, rgb(192, 212, 51),rgb(254, 105, 74)); 
-           background-blend-mode:overlay,overlay,overlay,normal;
+  background-image: linear-gradient(112.5deg, rgb(199, 149, 37) 0%, rgb(199, 149, 37) 2%,rgb(202, 137, 37) 2%, rgb(202, 137, 37) 10%,rgb(205, 124, 37) 10%, rgb(205, 124, 37) 38%,rgb(208, 112, 37) 38%, rgb(208, 112, 37) 64%,rgb(210, 100, 36) 64%, rgb(210, 100, 36) 66%,rgb(213, 87, 36) 66%, rgb(213, 87, 36) 78%,rgb(216, 75, 36) 78%, rgb(216, 75, 36) 100%),linear-gradient(157.5deg, rgb(199, 149, 37) 0%, rgb(199, 149, 37) 2%,rgb(202, 137, 37) 2%, rgb(202, 137, 37) 10%,rgb(205, 124, 37) 10%, rgb(205, 124, 37) 38%,rgb(208, 112, 37) 38%, rgb(208, 112, 37) 64%,rgb(210, 100, 36) 64%, rgb(210, 100, 36) 66%,rgb(213, 87, 36) 66%, rgb(213, 87, 36) 78%,rgb(216, 75, 36) 78%, rgb(216, 75, 36) 100%),linear-gradient(67.5deg, rgb(199, 149, 37) 0%, rgb(199, 149, 37) 2%,rgb(202, 137, 37) 2%, rgb(202, 137, 37) 10%,rgb(205, 124, 37) 10%, rgb(205, 124, 37) 38%,rgb(208, 112, 37) 38%, rgb(208, 112, 37) 64%,rgb(210, 100, 36) 64%, rgb(210, 100, 36) 66%,rgb(213, 87, 36) 66%, rgb(213, 87, 36) 78%,rgb(216, 75, 36) 78%, rgb(216, 75, 36) 100%),linear-gradient(90deg, rgb(65, 48, 207),rgb(202, 204, 121)); background-blend-mode:overlay,overlay,overlay,normal;
 }
 
 
