--- a/styles/styles.css
+++ b/styles/styles.css
@@ -526,6 +526,7 @@ section {
 .timeline .timeline-item p {
   color: var(--color-grey-2);
   padding: 0.5em;
+  font-size: x-small;
 }
 
 .timeline .timeline-item {
@@ -586,7 +587,7 @@ section {
   transition: all 0.4s ease-in-out;
 }
 .portfolios .portfolio-item .hover-items h3 {
-  font-size: 1.2rem;
+  font-size: small;
   color: var(--color-white);
   margin-bottom: 1.5rem;
 }
@@ -671,9 +672,11 @@ section {
   padding: 1.1rem;
   border-top: 0.5rem solid var(--color-secondary);
 }
+
 .blogs .blog .blog-text h4 {
-  font-size: 1.2rem;
-  font-weight: 500;
+  font-size:small;
+  text-transform: uppercase;
+  font-weight: 400;
   margin-bottom: 0.7rem;
   transition: all 0.4s ease-in-out;
   cursor: pointer;
@@ -685,6 +688,7 @@ section {
   color: var(--color-grey-2);
   line-height: 2rem;
   padding-bottom: 0rem;
+  font-size: x-small;
 }
 
 .contact-content-con {
@@ -696,13 +700,20 @@ section {
 }
 .contact-content-con .left-contact h4 {
   margin-top: 1rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
 }
 .contact-content-con .left-contact p {
   margin: 1rem 0;
   line-height: 2rem;
+  font-size: small;
 }
+
+.left-contact span {
+  font-size: small;
+  text-transform: uppercase;
+}
+
 .contact-content-con .left-contact .contact-info .contact-item {
   display: flex;
   align-items: left;
