--- a/styles/styles.css
+++ b/styles/styles.css
@@ -706,7 +706,7 @@ section {
 .contact-content-con .left-contact p {
   margin: 1rem 0;
   line-height: 2rem;
-  font-size: small;
+  font-size: x-small;
 }
 
 .left-contact span {
